Hamlib -- History of visible changes.

Copyright (C) 2000-2003  Frank Singleton
Copyright (C) 2000-2021  Stephane Fillod, and others
Copyright (C) 2000-2021  Michael Black W9MDB, and others

Please send Hamlib bug reports to hamlib-developer@lists.sourceforge.net

Version 4.2
    * 2021-03-?? -- anticipated release date
    * Frequency and PTT are now validated -- may solve some random problems
    ** where freq and ptt get stuck or not changed
    * Major rework for PRM80
    * Add twiddle_timeout and twiddle_rit --set-conf options
        rigctld --set-conf=twiddle_timeout=5,twiddle_rit=1 
        This will set the twiddle timeout to 5 seconds and turn on twiddle_rit
        For twiddle timeout VFOB will not be polled for 5 seconds after VFO twiddling is detected
    rigctld --twiddle is deprecated and will be removed in 5.0 along with get_twiddle and set_twiddle

Version 4.2

Version 4.1
        2021-01-31
        * rigctld and rigs should be more robust for disconnect problems
        * Several fixes for Icom and Yaesu rigs
        * Nobody should need to use rig->caps or rig->state anymore
             If you need a variable added please contact us.
             Note that rig->state abstraction is not implemented yet...no need known
        * New rig_get_caps_int and rig_get_caps_cptr functions to replace using caps-> values
        * New rig_get_function to replace using caps-> function pointers
        * Fix shared library problem with WSJTX, JTDX, and JS8Call
        * New model Barrett 950

Version 4.0
        2020-11-29
        * API/ABI changes, advance ABI to 4 0 0.
        * Add GPIO and GPION options for DCD.  Jeroen Vreeken
        * New backend: ELAD FDM DUO.  Giovanni, HB9EIK.
        * New RIG_LEVEL_RFPOWER_METER_WATTS level
        * All channel functions now take a vfo argument
	* New rotator backend: iOptron. Bob, KD8CGH
	* New model: Icom IC-R8600.  Ekki, DF4OR
	* New utility: rigctlcom.  Mike, W9MDB