@@ -176,7 +176,7 @@
 #define RIG_MODEL_PT8000A RIG_MAKE_MODEL(RIG_KENWOOD, 46)
 #define RIG_MODEL_K4 RIG_MAKE_MODEL(RIG_KENWOOD, 47)
 #define RIG_MODEL_POWERSDR RIG_MAKE_MODEL(RIG_KENWOOD, 48)
-
+#define RIG_MODEL_MALACHITE RIG_MAKE_MODEL(RIG_KENWOOD, 49)
 
 /*
  * Icom
